# WebCamAdapter

./: CMakeLists.txt  UvcGadget.cpp  UvcGadget.h  main.cpp
